--- a/daifadingdanxiangqing.html
+++ b/daifadingdanxiangqing.html
@@ -148,63 +148,117 @@
                         关联商户销售订单 <span class="sub1-color">2154548789879</span>
                     </div>
                     <!--代发订单信息  -->
-                    <div class="substitute-information">
-                        <div class="padd-left">代发订单信息</div>
-                        <div class="substitute-left">
-                            <ul>
-                                <li>
-                                    <em>当前状态：</em>
-                                    <span class="deduct">扣款中</span>
-                                </li>
-                                <li>
-                                    <em>代发订单号：</em>
-                                    <span class="code">1</span>
-                                </li>
-                                <li>
-                                    <em>创建时间：</em>
-                                    <span class="creation-time">2019-05-06 </span>
-                                    <span class="creation-hms">23:22:21</span>
-                                </li>
-                                <li>
-                                    <em>同步时间：</em>
-                                    <span class="synchronization-time">2019-05-06 </span>
-                                    <span class="synchronization-hms">23:22:21</span>
-                                </li>
-                                <li>
-                                    <em>发货时间：</em>
-                                    <span class="delivery-time ">2019-05-06 </span>
-                                    <span class="delivery-hms">23:22:21</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="substitute-right">
-                            <ul>
-                                <li>
-                                    <em>销售订单状态：</em>
-                                    <span class="order-status">代发货</span>
-                                </li>
-                                <li>
-                                    <em>用户下单时间：</em>
-                                    <span class="order-itme">2019-05-06 </span>
-                                    <span class="order-hms">23:22:21</span>
-                                </li>
-                                <li>
-                                    <em>用户支付时间：</em>
-                                    <span class="timeOfPayment">2019-05-06 </span>
-                                    <span class="payment-hms">23:22:21</span>
-                                </li>
-                                <li>
-                                    <em>用户收货时间：</em>
-                                    <span class="receiving-time">2019-05-06</span>
-                                    <span class="receiving-hms">23:22:21</span>
-                                </li>
-                            </ul>
-                        </div>
+
+                    <div>
+                        <form class="layui-form padd-left" action="">
+                            <p class="form-title">代发订单信息</p>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">当前状态：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="deduct">扣款中</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">销售订单状态：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="order-status">代发货</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">代发订单号：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container">
+                                            <div class="padd-top">
+                                                <span class="code">1</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">用户下单时间：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container">
+                                            <div class=" padd-top">
+                                                <span class="order-itme">2019-05-06 </span>
+                                                <span class="order-hms">23:22:21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">创建时间：</label>
+                                    <div class="selectTwo float-left padd-top">
+                                        <span class="creation-time">2019-05-06 </span>
+                                        <span class="creation-hms">23:22:21</span>
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">用户支付时间： </label>
+                                    <div class="selectTwo float-left padd-top">
+                                        <span class="timeOfPayment">2019-05-06 </span>
+                                        <span class="payment-hms">23:22:21</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">同步时间：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container">
+                                            <div class="padd-top">
+                                                <span class="synchronization-time">2019-05-06 </span>
+                                                <span class="synchronization-hms">23:22:21</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">用户收货时间：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container">
+                                            <div class=" padd-top">
+                                                <span class="receiving-time">2019-05-06</span>
+                                                <span class="receiving-hms">23:22:21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">发货时间：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container">
+                                            <div class=" padd-top">
+                                                <span class="delivery-time ">2019-05-06 </span>
+                                                <span class="delivery-hms">23:22:21</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     <!-- 商品信息 -->
-                    <div class="layui-tab-content">
+                    <div class="layui-tab-content padd-left">
                         <p class="form-title" style="padding-bottom:20px;">商品信息 <span
-                                class="apply-compensation">申请商户补偿</span></p>
+                                class="apply-compensation  layui-word-aux">申请商户补偿</span></p>
                         <div class="table">
                             <table class="layui-table" style="table-layout:fixed;margin:0;">
                                 <colgroup>
@@ -286,56 +340,77 @@
                         </div>
                     </div>
                     <!--商品信息  -->
-                    <div class="substitute-information">
-                        <div class="padd-left">商品信息</div>
-                        <div class="substitute-left">
-                            <ul>
-                                <li>
-                                    <em>收货人：</em>
-                                    <span class="consignee">李先生</span>
-                                </li>
-                                <li>
-                                    <em>收获地址：</em>
-                                    <span class="harvest-address">浙江省杭州市余杭区金家渡南路（3号楼33号）</span>
-                                </li>
-                                <li>
-                                    <em>邮编：</em>
-                                    <span class="zip-code">100001</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="substitute-right">
-                            <ul>
-                                <li>
-                                    <em>收获手机号：</em>
-                                    <span class="cellPhoneNumber">19875666666</span>
-                                </li>
-                            </ul>
-                        </div>
+                    <div>
+                        <form class="layui-form padd-left" action="">
+                            <p class="form-title">商品信息</p>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">收货人：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="consignee">李先生</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">收获手机号：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="cellPhoneNumber">19875666666</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">收获地址：</label>
+                                    <div class="layui-input-block">
+                                        <div class="padd-top">
+                                                <span class="harvest-address">浙江省杭州市余杭区金家渡南路（3号楼33号）</span>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">邮编：</label>
+                                    <div class="selectTwo float-left padd-top">
+                                        <em>邮编：</em>
+                                        <span class="zip-code">100001</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     <!--商户信息  -->
-                    <div class="substitute-information">
-                        <div class="padd-left">商户信息</div>
-                        <div class="substitute-left">
-                            <ul>
-                                <li>
-                                    <em>商户信息： </em>
-                                    <span class="merchant-information">松松社区（577575725757）</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="substitute-right">
-                            <ul>
-                                <li>
-                                    <em>供货商商户信息：</em>
-                                    <span class="supplier-information">火把知识（4154466646464）</span>
-                                </li>
-                            </ul>
-                        </div>
+                    <div>
+                        <form class="layui-form padd-left" action="">
+                            <p class="form-title">商户信息</p>
+                            <div class="layui-form-item">
+                                <div class="layui-inline">
+                                    <label class="layui-form-label">商户信息：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="merchant-information">松松社区（577575725757）</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="layui-inline input-layout-two">
+                                    <label class="layui-form-label">供货商商户信息：</label>
+                                    <div class="layui-input-block">
+                                        <div class="input-one1-container padd-top">
+                                            <span class="supplier-information">火把知识（4154466646464）</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
+
                     <!--操作记录  -->
                     <div>
-                        <form class="layui-form" action="">
+                        <form class="layui-form padd-left" action="">
                             <p class="form-title padd-left">操作记录</p>
                             <div class="layui-form-item">
                                 <div class="operating-record">
@@ -362,7 +437,7 @@
         </div>
 
         <!-- 底部 -->
-        <div class="layui-footer"></div>
+        <!-- <div class="layui-footer"></div> -->
     </div>
 </body>
 
@@ -449,6 +524,7 @@
                     if (valPricing <= 23 && valPricing >= 0) {
                         //
                         $(".msg").css('opacity', '0');
+
                     } else {
                         $(".msg").css('opacity', '1');
                     }
