--- a/index.html
+++ b/index.html
@@ -353,7 +353,10 @@
 					</select>
 				</form>
 			</div>
-			<p class="title">多级联下拉框</p>
+			<p class="title">
+				<svg class="icon" aria-hidden="true">
+					<use xlink:href="#iconguanlian"></use>
+				</svg>多级联下拉框</p>
 			<div>
 				<cascader id="demo2"></cascader>
 			</div>
