--- a/index.html
+++ b/index.html
@@ -902,6 +902,7 @@
 				<span id="popup3" class="popup">弹窗3</span>
 				<span id="popup4" class="popup">弹窗4</span>
 				<span id="popup5" class="popup">弹窗5</span>
+				<span id="popup6" class="popup">弹窗6</span>
 				<span id="confirm" class="popup">弹窗confirm</span>
 				<span id="alert" class="popup">弹窗alert</span>
 
@@ -925,7 +926,7 @@
 					<span></span>
 					<input type="text" class="layui-input test1" placeholder="结束时间">
 				</div>
-			</divc>
+				</divc>
 		</article>
 		<article id="badge">
 			<p class="title">
@@ -1142,6 +1143,33 @@
 			}
 		});
 	})
+
+	//弹窗6
+	$("#popup6").click(function () {
+		//询问框
+		layer.alert('确定要删除此节目吗？删除后将无法恢复。', {
+			btn: ['删 除', '取 消'],
+			area: ['430px', '228px'], //宽高
+			// move: false, //禁止拖拽
+			success: function (data) {
+				$(".layui-layer-dialog").addClass('popup6');
+			},
+			yes: function (index, layero) {
+				//按钮删除的回调
+				// layer.close(index); //如果设定了yes回调，需进行手工关闭
+			},
+			btn2: function (index, layero) {
+				//按钮取消的回调
+				// layer.close(index); //如果设定了yes回调，需进行手工关闭
+				//return false 开启该代码可禁止点击该按钮关闭
+			}
+		});
+	})
+
+
+
+
+
 	//弹窗3
 	$("#popup3").click(function () {
 		//页面层
