--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 								class="layui-input">
 							<div class="input-number"><span class="input-on-number">0</span>/<span
 									class="input-max-number">100
-									</spani>
+									</span>
 							</div>
 						</div>
 						<p class="desc">描述</p>
