--- a/index.html
+++ b/index.html
@@ -903,6 +903,7 @@
 				<span id="popup4" class="popup">弹窗4</span>
 				<span id="popup5" class="popup">弹窗5</span>
 				<span id="popup6" class="popup">弹窗6</span>
+				<span id="msg" class="popup">弹窗msg</span>
 				<span id="confirm" class="popup">弹窗confirm</span>
 				<span id="alert" class="popup">弹窗alert</span>
 
@@ -1145,6 +1146,13 @@
 				// layer.close(index); //如果设定了yes回调，需进行手工关闭
 				//return false 开启该代码可禁止点击该按钮关闭
 			}
+		});
+	})
+
+	//弹窗msg
+	$("#msg").click(function () {
+		layer.msg('大部分参数都是可以公用的<br>合理搭配，展示不一样的风格', {
+			time: 2000, //2s后自动关闭
 		});
 	})
 
